# Intent-Engine

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  EVALUATION.md  EXECUTION_GUIDE.md  LICENSE  Makefile  README.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
examples/integrations/: README.md  test_discord.py
intent_engine/: __init__.py  cloud_engine.py  engine.py  errors.py  hybrid_engine.py  local_engine.py
intent_engine/constitutional/: __init__.py  evaluator.py  filter.py  rules.py
intent_engine/integrations/: __init__.py  discord.py  server.py  slack.py  twilio.py
intent_engine/llm/: __init__.py  base.py  claude.py  local.py  openai.py  prompts.py
intent_engine/models/: __init__.py  audio.py  decision.py  response.py  result.py
intent_engine/stt/: __init__.py  assemblyai.py  base.py  deepgram.py  whisper.py
intent_engine/training/: __init__.py  evaluator.py  fine_tuner.py  mavis_converter.py
intent_engine/tts/: __init__.py  base.py  coqui.py  elevenlabs.py  espeak.py
tests/: conftest.py  test_accessibility.py  test_benchmarks.py  test_cloud_engine.py  test_end_to_end.py  test_engine.py  test_errors.py  test_hybrid_engine.py  test_iml_contract.py  test_integration.py  test_local_engine.py  test_performance.py  test_prosody_protocol_import.py
tests/constitutional/: sample_rules.yaml  test_evaluator.py  test_filter.py  test_rules.py
tests/integrations/: test_discord.py  test_server.py  test_slack.py  test_twilio.py
tests/llm/: test_base.py  test_claude.py  test_local.py  test_openai.py  test_prompts.py  test_registry.py
tests/models/: test_audio.py  test_decision.py  test_response.py  test_result.py
tests/stt/: test_assemblyai.py  test_base.py  test_deepgram.py  test_registry.py  test_whisper.py
tests/training/: test_evaluator.py  test_fine_tuner.py  test_mavis_converter.py
tests/tts/: test_base.py  test_coqui.py  test_elevenlabs.py  test_espeak.py  test_registry.py
